Text Alignment fixed

--- a/public/application.css
+++ b/public/application.css
@@ -54,6 +54,10 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
+.welcome-note h1 {
+  text-align: center;
+  justify-content: center;
+}
 
 .cover-pic img {
   height: 80%;
